Adding a simple test application

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -34,3 +34,7 @@ RUN curl -SL $DOTNET_DOWNLOAD_URL --output dotnet.tar.gz \
     && tar -zxf dotnet.tar.gz -C /usr/share/dotnet \
     && rm dotnet.tar.gz \
     && ln -s /usr/share/dotnet/dotnet /usr/bin/dotnet
+
+COPY Clock .
+RUN dotnet restore
+RUN dotnet run
