Fixing build issue

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -35,5 +35,5 @@ RUN curl -SL $DOTNET_DOWNLOAD_URL --output dotnet.tar.gz \
     && rm dotnet.tar.gz \
     && ln -s /usr/share/dotnet/dotnet /usr/bin/dotnet
 
-COPY Clock.* .
+COPY Clock.* ./
 RUN dotnet Clock.dll
