Removing entry point

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -36,4 +36,4 @@ RUN curl -SL $DOTNET_DOWNLOAD_URL --output dotnet.tar.gz \
     && ln -s /usr/share/dotnet/dotnet /usr/bin/dotnet
 
 COPY Clock.* ./
-ENTRYPOINT ["dotnet", "Clock.dll"]
+#ENTRYPOINT ["dotnet", "Clock.dll"]
