--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -35,5 +35,6 @@ RUN curl -SL $DOTNET_DOWNLOAD_URL --output dotnet.tar.gz \
     && rm dotnet.tar.gz \
     && ln -s /usr/share/dotnet/dotnet /usr/bin/dotnet
 
+WORKDIR /app
 COPY Clock.* ./
-#ENTRYPOINT ["dotnet", "Clock.dll"]
+ENTRYPOINT ["dotnet", "./Clock.dll"]
